# OVERENGINEERED_BLACKJACK

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  RULES.md  p.bat  text  text.txt
.claude/: settings.local.json
ExplosionsPack01/Explosion01/: Explosion01.aseprite
ExplosionsPack01/Explosion02/: Explosion02.aseprite
ExplosionsPack01/Explosion03/: Explosion03.aseprite
assets/images/: gigachadCards.aseprite
assets_8bit_playing_cards/assets_8bit_playing_cards/: README.txt
docs/: adding_new_event.md  auto_pick_and_timer_system.md  card_visibility.md  chronosphere_implementation.md  fatal_deal_implementation.md  multi_actor_skill_design.md
ost/: bg.flp
src/: main.cpp
src/assets/: layout.txt
src/gameEngine/: AnimationManager.h  EventQueue.h  Game.cpp  Game.h  Log.h  PresentationLayer.cpp  PresentationLayer.h  RoundManager.cpp  RoundManager.h  UIManager.cpp  UIManager.h
src/lowLevelEntities/: Card.cpp  Card.h  Deck.cpp  Deck.h  GameConfig.h  GameEvent.h  GameState.cpp  GameState.h  Player.cpp  Player.h  SkillDeck.h  VisualState.cpp  VisualState.h
src/networking/: NetMessage.h  NetSerializer.h  NetworkManager.cpp  NetworkManager.h
src/phaseEngine/: BattlePhase.cpp  BattlePhase.h  BlackJackCheckPhase.cpp  BlackJackCheckPhase.h  GameStartPhase.cpp  GameStartPhase.h  HostHitPhase.cpp  HostHitPhase.h  Phase.cpp  Phase.h  PlayerHitPhase.cpp  PlayerHitPhase.h  RoundEndPhase.cpp  RoundEndPhase.h
src/skillEngine/: Skill.h  SkillManager.cpp  SkillManager.h  Skill_ChronoSphere.h  Skill_Deliverance.h  Skill_DestinyDeflect.h  Skill_FatalDeal.h  Skill_NeuralGambit.h
